--- a/.env
+++ b/.env
@@ -17,15 +17,23 @@ DEFAULT_CAMERA_STREAM=
 
 # ===== Edge Configuration =====
 EDGE_MODE=real           # fake | real
-EDGE_CAMERA_ID=2
+EDGE_CAMERA_ID=1
 EDGE_POST_INTERVAL_SECONDS=3
 EDGE_CONFIG_REFRESH_SECONDS=30
 
 # Backend API URL (local, no Docker)
 BACKEND_URL=http://localhost:8000
 
-# Stream URL: webcam server HTTP stream
-EDGE_STREAM_URL=http://localhost:8081/video
+# ===== Camera Source =====
+# Edge worker bisa langsung baca webcam TANPA perlu Flask rtsp server terpisah.
+# Pilihan:
+#   "0"                         → webcam langsung (index 0)
+#   "1"                         → webcam index 1
+#   "http://localhost:8081/video" → jika tetap mau pakai rtsp_webcam_server.py
+#   "rtsp://ip:port/stream"     → IP camera RTSP
+EDGE_STREAM_URL=0
+
+# Port untuk menyajikan video hasil proses YOLO+tracking ke frontend
 EDGE_STREAM_PORT=5000
 
 # Auth credentials for edge to backend
@@ -36,7 +44,7 @@ EDGE_AUTH_PASSWORD=admin123
 YOLOV5_CONF=0.35
 YOLOV5_IOU=0.45
 YOLOV5_IMG_SIZE=640
-YOLOV5_DEVICE=xpu        # cpu | cuda:0
+YOLOV5_DEVICE=cpu        # cpu | cuda:0 | xpu (Intel GPU)
 YOLOV5_REPO=
 YOLOV5_WEIGHTS=
 
