--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "daisyui": "^4.12.24",
+    "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "axios": "^1.6.0",
-    "js-cookie": "^3.0.5"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.24",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   },
   "engines": {
     "node": ">=18.0.0",
